--- a/ejemplos.html
+++ b/ejemplos.html
@@ -12,24 +12,224 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <header>
-            <div class="head">
-                <div class="cont">
-                    <nav>
-                        <a href="index.html">Bienvenido</a>
-                        <a href="biografia.html">Biografía</a>
-                        <a href="ejemplos.html">Ejemplos de trabajo</a>
-                        <a href="contacto.html">Información de contacto</a>
-                    </nav>
-                </div>
-                <img src="img/ejemplos.jpg" alt="Wlcome" class="welcome">
-            </div>
-        </header>
-        <main>
 
+    <header>
+        <div class="head">
+            <div class="cont">
+                <nav>
+                    <a href="index.html">Bienvenido</a>
+                    <a href="biografia.html">Biografía</a>
+                    <div class="inicio">
+                        <div class="colorNav">
+                            <a href="ejemplos.html">Ejemplos</a>
+                        </div>
+                        <nav class="ini">
+                            <a href="#modelado">Modelado en 3d</a>
+                            <a href="#processing">Processing</a>
+                            <a href="#after">After Effects</a>
+                            <a href="#bokobo">Bokobo art</a>
+                            <a href="#ilustracion"> Ilustración</a>
+                        </nav>
+                    </div>
+                    <a href="contacto.html">Contacto</a>
+                </nav>
+            </div>
+            <div class="redes">
+
+                <div class="redes1">
+                    <a target="_blank" href="https://www.instagram.com/gonzandres_10/"><img
+                            src="assets/img/instagram.png" alt="Instagram" width="40px"></a>
+                </div>
+
+
+                <div class="redes1">
+                    <a target="_blank" href="https://www.linkedin.com/in/gonzalo-alarc%C3%B3n-28876ba3/"><img
+                            src="assets/img/linkedin.png" alt="Linkedin" width="50px"></a>
+                </div>
+                <div class="redes1">
+                    <a href="mailto:gonzandres_39@hotmail.com"><img src="assets/img/email.png" alt="Email"></a>
+                </div>
+
+            </div>
+
+            <img src="assets/img/ejemplos.jpg" alt="ejemplos" class="welcome">
+        </div>
+    </header>
+    <div class="wrapper">
+        <main>
+            <h1 class="titulo" id="modelado">Modelado en 3d</h1>
+            <div class="cont">
+                <figure>
+                    <h3>Escaleras</h3>
+                    <img src="assets/img/escaleras.jpg" alt="Escaleras 3d" class="img">
+                    <br>
+                    <br>
+                    <figcaption>Modelado 3d en Rhinoceros 5 de escaleras ciculares</figcaption>
+                </figure>
+                <figure>
+                    <h3>Sandalia deportiva</h3>
+                    <img src="assets/img/sandalia.jpg" alt="Sandalia 3d" class="img">
+                    <br>
+                    <br>
+                    <figcaption>Sandalia diseñada en Rhinoceros 5</figcaption>
+                </figure>
+                <figure>
+                    <h3>Sandalia deportiva renderizada</h3>
+                    <img src="assets/img/sandali2.jpg" alt="Sandalia 3d" class="img">
+                    <br>
+                    <br>
+                    <figcaption>Sandalia renderizada en Rhinoceros 5</figcaption>
+                </figure>
+            </div>
+            <h1 class="titulo" id="processing">Processing</h1>
+            <div class="cont">
+                <figure>
+                    <h3>Círculos</h3>
+                    <img src="assets/img/processing1.jpg" alt="Ejemplo de processing 1" class="img">
+                    <br>
+                    <br>
+                    <figcaption>Este ejemplo no tiene interacción es simplemente un dibujo en el lenguaje de
+                        processing</figcaption>
+                </figure>
+                <figure>
+                    <h3>Bandera Inglesa</h3>
+                    <img src="assets/img/processing2.jpg" alt="Ejemplo de processing 2" class="img">
+                    <br>
+                    <br>
+                    <figcaption>Dibujo de la bandera Inglesa con processing</figcaption>
+                </figure>
+                <figure>
+                    <h3>Círculo exponencial</h3>
+                    <img src="assets/img/processing3.jpg" alt="Ejemplo de processing 3" class="img">
+                    <br>
+                    <br>
+                    <figcaption>En este ejemplo podemos ver como el círculo crece de manera exponencial al momento
+                        de cargar la página</figcaption>
+                </figure>
+            </div>
+            <h1 class="titulo" id="after">Affter Effects</h1>
+            <div class="contVideo">
+                <div class="contPeque">
+                    <div>
+                        <h3>Animación con tipografía</h3>
+                        <video controls class="vid">
+                            <source src="assets/video/animacion.mp4">
+                    </div>
+
+                    <br>
+                    <p>Una animación hecha con tipografía una fotografía propia utilizando affter effects</p>
+                </div>
+                <div class="contPeque">
+                    <div>
+                        <h3>Terras Gauda</h3>
+                        <video controls class="vid">
+                            <source src="assets/video/gauda.mp4">
+                    </div>
+
+                    <br>
+                    <p>Animación para terras gauda utilizando una ilustración que hice para un concurso de dibujo</p>
+                </div>
+                <div class="contPeque">
+                    <div>
+                        <h3>Ace</h3>
+                        <video controls class="vid">
+                            <source src="assets/video/cartas.mp4">
+
+                    </div>
+
+                    <br>
+                    <p>Una animación sencilla utilizando los glifos de las cartas</p>
+                </div>
+            </div>
+            <h1 class="titulo" id="bokobo">Bokobo art</h1>
+            <div class="contVideo">
+                <div class="contPeque">
+                    <div>
+                        <h3>Regala Bokobo en Navidad</h3>
+                        <video controls class="vid">
+                            <source src="assets/video/bokobo1.mp4">
+                    </div>
+
+                    <br>
+                    <p>El primer video que tuve que hacer para Bokbo art, un estudio de arte que me acogió en las
+                        prácticas</p>
+                </div>
+                <div class="contPeque">
+                    <div>
+                        <h3>Regala arte aunque exista una pandemia</h3>
+                        <video controls class="vid">
+                            <source src="assets/video/bokobo2.mp4">
+
+                    </div>
+
+                    <br>
+                    <p>Un video publicitario para incentivar a la gente a regalar arte aun que estemos amenzados por
+                        una pandemia</p>
+                </div>
+                <div class="contPeque">
+                    <div>
+                        <h3>Alegría y dolor</h3>
+                        <video controls class="vid">
+                            <source src="assets/video/bokobo3.mp4">
+
+                    </div>
+
+                    <br>
+                    <p>Un video emotivo para los amantes del arte.</p>
+                </div>
+            </div>
+            <h1 class="titulo" id="ilustracion">Ilustración</h1>
+            <div class="cont">
+                <figure>
+                    <h3>Postal búho</h3>
+                    <img src="assets/img/buho.png" alt="Ejemplo de ilustración" class="img">
+                    <br>
+                    <br>
+                    <figcaption>Es una ilustración que hice para una de las postales que iba a incluir en un starter
+                        pack de una suscripción para aprender a escribir.</figcaption>
+                </figure>
+                <figure>
+                    <h3>Retrato</h3>
+                    <img src="assets/img/grecia.png" alt="Ejemplo de ilustración" class="img">
+                    <br>
+                    <br>
+                    <figcaption>Es una ilustración que hice para una amiga que conocí en la universidad.</figcaption>
+                </figure>
+                <figure>
+                    <h3>Portada de libro</h3>
+                    <img src="assets/img/libro.png" alt="Ejemplo de ilustración" class="img">
+                    <br>
+                    <br>
+                    <figcaption>Es una ilustración que hice para la portada de un libro de misterio.</figcaption>
+                </figure>
+            </div>
         </main>
+
     </div>
+    <footer>
+        <div>
+            <div class="footer">
+                <div class="wrapperFooter">
+                    <h4>TFG de diseño gráfico</h4>
+                    <div class="fondoFooter">
+
+                        <a target="_blank"
+                            href="https://wetransfer.com/downloads/e5933a9ee94886e027983bfa601e8eb820210207190036/e75168"><img
+                                src="assets/img/escribelo.png" alt="Tfg de esritura"></a>
+                    </div>
+                </div>
+                <div class="wrapperEnlaces">
+                    <div class="enlacesFooter">
+                        <a target="_blank" href="https://www.instagram.com/gonzandres_10/">Instagram</a>
+                    </div>
+                    <div class="enlacesFooter">
+                        <a target="_blank"
+                            href="https://www.linkedin.com/in/gonzalo-alarc%C3%B3n-28876ba3/">Linkedin</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
