--- a/contacto.html
+++ b/contacto.html
@@ -12,23 +12,87 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <header>
-            <div class="head">
-                <div class="cont">
-                    <nav>
-                        <a href="index.html">Bienvenido</a>
-                        <a href="biografia.html">Biografía</a>
-                        <a href="ejemplos.html">Ejemplos de trabajo</a>
-                        <a href="contacto.html">Información de contacto</a>
-                    </nav>
-                </div>
-                <img src="img/contacto.jpg" alt="Wlcome" class="welcome">
-            </div>
-        </header>
-        <main>
 
-        </main>
+    <header>
+        <div class="head">
+            <div class="cont">
+                <nav>
+                    <a href="index.html">Bienvenido</a>
+                    <a href="biografia.html">Biografía</a>
+                    <a href="ejemplos.html">Ejemplos</a>
+                    <a href="contacto.html">Contacto</a>
+                </nav>
+            </div>
+            <div class="redes">
+                <div class="redes1">
+                    <a target="_blank" href="https://www.instagram.com/gonzandres_10/"><img
+                            src="assets/img/instagram.png" alt="Instagram" width="40px"></a>
+                </div>
+
+
+                <div class="redes1">
+                    <a target="_blank" href="https://www.linkedin.com/in/gonzalo-alarc%C3%B3n-28876ba3/"><img
+                            src="assets/img/linkedin.png" alt="Linkedin" width="50px"></a>
+                </div>
+                <div class="redes1">
+                    <a href="mailto:gonzandres_39@hotmail.com"><img src="assets/img/email.png" alt="Email"></a>
+                </div>
+            </div>
+            <img src="assets/img/contacto.jpg" alt="Contacto" class="welcome">
+        </div>
+    </header>
+    <div class="wrapper"></div>
+    <main>
+        <div class="wrapper">
+            <h1 class="titulo">Name</h1>
+            <div class="form">
+                <form action="/action_page.php">
+                    <label for="fname">First name:</label><br>
+                    <input type="text" id="fname" name="fname" placeholder="John"><br><br><br>
+                    <label for="lname">Last name:</label><br>
+                    <input type="text" id="lname" name="lname" placeholder="Doe"><br><br>
+                    <label for="phone">Enter a phone number:</label><br><br>
+                    <input type="tel" id="phone" name="phone" placeholder="123-45-678"
+                        pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required><br><br>
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
+            <h1 class="titulo">Message</h1>
+            <div class="form">
+                <form action="/action_page.php">
+                    <textarea name="message" placeholder="Type your concern"></textarea>
+                    <br><br>
+
+                    <input type="Submit" value="Submit">
+                </form>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <div>
+            <div class="footer">
+                <div class="wrapperFooter">
+                    <h4>TFG de diseño gráfico</h4>
+                    <div class="fondoFooter">
+
+                        <a target="_blank"
+                            href="https://wetransfer.com/downloads/e5933a9ee94886e027983bfa601e8eb820210207190036/e75168"><img
+                                src="assets/img/escribelo.png" alt="Tfg de esritura"></a>
+                    </div>
+                </div>
+                <div class="wrapperEnlaces">
+                    <div class="enlacesFooter">
+                        <a target="_blank" href="https://www.instagram.com/gonzandres_10/">Instagram</a>
+                    </div>
+                    <div class="enlacesFooter">
+                        <a target="_blank"
+                            href="https://www.linkedin.com/in/gonzalo-alarc%C3%B3n-28876ba3/">Linkedin</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     </div>
 </body>
 
