--- a/index.html
+++ b/index.html
@@ -12,24 +12,63 @@
 </head>
 
 <body>
-    <div class="wrapper">git
-        <header>
-            <div class="head">
-                <div class="cont">
-                    <nav>
-                        <a href="index.html">Bienvenido</a>
-                        <a href="biografia.html">Biografía</a>
-                        <a href="ejemplos.html">Ejemplos de trabajo</a>
-                        <a href="contacto.html">Información de contacto</a>
-                    </nav>
-                </div>
-                <img src="img/welcome.jpg" alt="Welcome" class="welcome">
+    <header>
+        <div class="head">
+            <div class="cont">
+                <nav>
+                    <a href="index.html">Bienvenido</a>
+                    <a href="biografia.html">Biografía</a>
+                    <a href="ejemplos.html">Ejemplos</a>
+                    <a href="contacto.html">Contacto</a>
+                </nav>
             </div>
-        </header>
-        <main>
+            <div class="redes">
 
-        </main>
+                <div class="redes1">
+                    <a target="_blank" href="https://www.instagram.com/gonzandres_10/"><img
+                            src="assets/img/instagram.png" alt="Instagram" width="40px"></a>
+                </div>
+
+
+                <div class="redes1">
+                    <a target="_blank" href="https://www.linkedin.com/in/gonzalo-alarc%C3%B3n-28876ba3/"><img
+                            src="assets/img/linkedin.png" alt="Linkedin" width="50px"></a>
+                </div>
+                <div class="redes1">
+                    <a href="mailto:gonzandres_39@hotmail.com"><img src="assets/img/email.png" alt="Email"></a>
+                </div>
+            </div>
+            <img src="assets/img/welcome.jpg" alt="Welcome" class="welcome">
+        </div>
+    </header>
+    <main>
+        <div class="wrapper">
+    </main>
     </div>
+    <footer>
+        <div>
+            <div class="footer">
+                <div class="wrapperFooter">
+                    <h4>TFG de diseño gráfico</h4>
+                    <div class="fondoFooter">
+
+                        <a target="_blank"
+                            href="https://wetransfer.com/downloads/e5933a9ee94886e027983bfa601e8eb820210207190036/e75168"><img
+                                src="assets/img/escribelo.png" alt="Tfg de esritura"></a>
+                    </div>
+                </div>
+                <div class="wrapperEnlaces">
+                    <div class="enlacesFooter">
+                        <a target="_blank" href="https://www.instagram.com/gonzandres_10/">Instagram</a>
+                    </div>
+                    <div class="enlacesFooter">
+                        <a target="_blank"
+                            href="https://www.linkedin.com/in/gonzalo-alarc%C3%B3n-28876ba3/">Linkedin</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
